# cad-khana

./: .gitignore  CLAUDE.md  NOTES.md  README.md  SKILL.md  pyproject.toml
references/: printability.md  standard_parts.md
references/examples/pin_hinge/: README.md  assembly.py
skills/cad-khana/: SKILL.md
skills/cad-khana-setup/: SKILL.md
skills/cad-khana/references/: build123d_quickref.md  install.md  printability.md
skills/cad-khana/references/examples/pin_hinge/: README.md  assembly.py
src/cad_khana/: _paths.py  cli.py  diff.py  export.py  render.py  viewer.py
src/cad_khana/core/: assembly.py  assertions.py  build.py  diagnostics.py  diff.py  export.py  render.py  tessellation.py  viewer.py
src/cad_khana/mechanism/: assembly.py  assertions.py  check.py  diagnostics.py  hints.py
src/cad_khana/printability/: inspect.py  methods.py  overhangs.py  wall.py
tests/: test_assembly.py  test_assertions.py  test_build.py  test_cli.py  test_diagnostics.py  test_diff.py
tests/mechanism/: test_assembly.py  test_assertions.py  test_check.py  test_diagnostics.py  test_hints.py
tests/printability/: test_inspect.py  test_overhangs.py  test_wall.py
