[project]
name = "cad-khana"
version = "0.0.1"
description = "Diagnostics-first CAD wrapper around Build123d, built for LLM-driven iteration."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [
    { name = "cad-khana contributors" },
]
keywords = ["cad", "build123d", "3d-printing", "llm", "agent"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bd-warehouse>=0.2.0",
    "build123d>=0.8",
    "ocp-vscode>=2.7",
    "pillow>=10",
    "typer>=0.12",
]

[project.scripts]
khana = "cad_khana.cli:main"

[project.urls]
Homepage = "https://github.com/restlessronin/cad-khana"
Issues = "https://github.com/restlessronin/cad-khana/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cad_khana"]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
